Modify some tables and captions.

--- a/results/few_shot/few_shot.ipynb
+++ b/results/few_shot/few_shot.ipynb
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
     "    position=\"h\",\n",
     "    position_float=\"centering\",\n",
     "    label=\"tab:few_shot\",\n",
-    "    caption=\"Few-shot results (accuracy scores) on ANLI. PoE applie to both zero-shot and few-shot settings.\",\n",
+    "    caption=r\"Few-shot result (accuracy scores) on ANLI. Best scores are \\textbf{bold}. PoE applie to both zero-shot and few-shot settings.\",\n",
     "    multicol_align=\"c\",\n",
     "    multirow_align=\"c\",\n",
     ")"
@@ -315,10 +315,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "n_shot\n",
+       "0    56.000000\n",
+       "3    62.933333\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# sing_means.droplevel(0, axis=1).transpose().max(axis=1)*100\n",
+    "sing_means.droplevel(0, axis=1).transpose().max(axis=0)*100\n",
+    "# find second largest value\n",
+    "sing_means.droplevel(0, axis=1).transpose().apply(lambda x: x.nlargest(2).iloc[-1]*100, axis=0)"
+   ]
   }
  ],
  "metadata": {
