--- a/results/few_shot/few_shot.tex
+++ b/results/few_shot/few_shot.tex
@@ -1,8 +1,8 @@
 \begin{table}[h]
 \centering
-\caption{Few-shot results on ANLI.}
+\caption{Few-shot result (accuracy scores) on ANLI. Best scores are \textbf{bold}. PoE applie to both zero-shot and few-shot settings.}
 \label{tab:few_shot}
-\begin{tabular}{lcccccc}
+\begin{tabular}{l|c|c}
 n shot & 0 shot & 3 shot \\
 Method &  &  \\
 LM & 39.3\textsubscript{6.0} & 45.5\textsubscript{9.2} \\
