--- a/results/main_exp/main_exp.ipynb
+++ b/results/main_exp/main_exp.ipynb
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,10 +275,217 @@
     "    position=\"h\",\n",
     "    position_float=\"centering\",\n",
     "    label=\"tab:main_exp\",\n",
-    "    caption=\"Accuracy scores (with standard deviation) on 8 benchmarks. LM refers to language modeling, AVG refers to average language modeling, MCP refers multiple choice prompting. Our method (PoE) achieves the best or comparable performance on all benchmarks.\",\n",
+    "    caption=r\"Accuracy scores (with standard deviation) on 8 benchmarks. Best scores are \\textbf{bold}, and second-best scores are \\underline{underlined}.LM refers to language modeling, AVG refers to average language modeling, MCP refers multiple choice prompting. Our method (PoE) achieves the best or comparable performance on all benchmarks.\",\n",
     "    multicol_align=\"c\",\n",
     "    multirow_align=\"c\",\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"6\" halign=\"left\">accuracy</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>method</th>\n",
+       "      <th>language_modeling</th>\n",
+       "      <th>average_language_modeling</th>\n",
+       "      <th>multiple_choice_prompt</th>\n",
+       "      <th>process_of_elimination</th>\n",
+       "      <th>calibration</th>\n",
+       "      <th>channel</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>dataset</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>anli</th>\n",
+       "      <td>0.386</td>\n",
+       "      <td>0.380</td>\n",
+       "      <td>0.578</td>\n",
+       "      <td>0.550</td>\n",
+       "      <td>0.372</td>\n",
+       "      <td>0.360</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cqa</th>\n",
+       "      <td>0.644</td>\n",
+       "      <td>0.542</td>\n",
+       "      <td>0.872</td>\n",
+       "      <td>0.892</td>\n",
+       "      <td>0.696</td>\n",
+       "      <td>0.446</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>siqa</th>\n",
+       "      <td>0.560</td>\n",
+       "      <td>0.626</td>\n",
+       "      <td>0.790</td>\n",
+       "      <td>0.820</td>\n",
+       "      <td>0.576</td>\n",
+       "      <td>0.398</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>logical_deduction_five_objects</th>\n",
+       "      <td>0.488</td>\n",
+       "      <td>0.458</td>\n",
+       "      <td>0.398</td>\n",
+       "      <td>0.536</td>\n",
+       "      <td>0.392</td>\n",
+       "      <td>0.208</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>disambiguation_qa</th>\n",
+       "      <td>0.458</td>\n",
+       "      <td>0.518</td>\n",
+       "      <td>0.678</td>\n",
+       "      <td>0.674</td>\n",
+       "      <td>0.480</td>\n",
+       "      <td>0.396</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>conceptual_combinations</th>\n",
+       "      <td>0.448</td>\n",
+       "      <td>0.518</td>\n",
+       "      <td>0.602</td>\n",
+       "      <td>0.722</td>\n",
+       "      <td>0.544</td>\n",
+       "      <td>0.440</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>strange_stories</th>\n",
+       "      <td>0.390</td>\n",
+       "      <td>0.406</td>\n",
+       "      <td>0.740</td>\n",
+       "      <td>0.766</td>\n",
+       "      <td>0.434</td>\n",
+       "      <td>0.266</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>symbol_interpretation</th>\n",
+       "      <td>0.248</td>\n",
+       "      <td>0.206</td>\n",
+       "      <td>0.254</td>\n",
+       "      <td>0.252</td>\n",
+       "      <td>0.210</td>\n",
+       "      <td>0.170</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                        accuracy                            \\\n",
+       "method                         language_modeling average_language_modeling   \n",
+       "dataset                                                                      \n",
+       "anli                                       0.386                     0.380   \n",
+       "cqa                                        0.644                     0.542   \n",
+       "siqa                                       0.560                     0.626   \n",
+       "logical_deduction_five_objects             0.488                     0.458   \n",
+       "disambiguation_qa                          0.458                     0.518   \n",
+       "conceptual_combinations                    0.448                     0.518   \n",
+       "strange_stories                            0.390                     0.406   \n",
+       "symbol_interpretation                      0.248                     0.206   \n",
+       "\n",
+       "                                                                              \\\n",
+       "method                         multiple_choice_prompt process_of_elimination   \n",
+       "dataset                                                                        \n",
+       "anli                                            0.578                  0.550   \n",
+       "cqa                                             0.872                  0.892   \n",
+       "siqa                                            0.790                  0.820   \n",
+       "logical_deduction_five_objects                  0.398                  0.536   \n",
+       "disambiguation_qa                               0.678                  0.674   \n",
+       "conceptual_combinations                         0.602                  0.722   \n",
+       "strange_stories                                 0.740                  0.766   \n",
+       "symbol_interpretation                           0.254                  0.252   \n",
+       "\n",
+       "                                                    \n",
+       "method                         calibration channel  \n",
+       "dataset                                             \n",
+       "anli                                 0.372   0.360  \n",
+       "cqa                                  0.696   0.446  \n",
+       "siqa                                 0.576   0.398  \n",
+       "logical_deduction_five_objects       0.392   0.208  \n",
+       "disambiguation_qa                    0.480   0.396  \n",
+       "conceptual_combinations              0.544   0.440  \n",
+       "strange_stories                      0.434   0.266  \n",
+       "symbol_interpretation                0.210   0.170  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sing_means"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dataset\n",
+       "anli                              55.0\n",
+       "cqa                               87.2\n",
+       "siqa                              79.0\n",
+       "logical_deduction_five_objects    48.8\n",
+       "disambiguation_qa                 67.4\n",
+       "conceptual_combinations           60.2\n",
+       "strange_stories                   74.0\n",
+       "symbol_interpretation             25.2\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# largest value\n",
+    "# sing_means.max(axis=1)*100\n",
+    "# second largest value\n",
+    "sing_means.apply(lambda row: row.nlargest(2).iloc[-1], axis=1) * 100"
    ]
   },
   {
