--- a/results/main_exp/main_exp.tex
+++ b/results/main_exp/main_exp.tex
@@ -1,6 +1,6 @@
 \begin{table}[h]
 \centering
-\caption{Accuracy scores (with standard deviation) on 8 benchmarks. LM refers to language modeling, MCP refers multiple choice prompt. Our method (PoE) achieves best or comparable performance on all benchmarks.}
+\caption{Accuracy scores (with standard deviation) on 8 benchmarks. Best scores are \textbf{bold}, and second-best scores are \underline{underlined}.LM refers to language modeling, AVG refers to average language modeling, MCP refers multiple choice prompting. Our method (PoE) achieves the best or comparable performance on all benchmarks.}
 \label{tab:main_exp}
 \begin{tabular}{l|c|c|c|c|c|c}
 Method & LM & AVG & Calibration & Channel & MCP & PoE \\
