--- a/results/num_option/num_option.ipynb
+++ b/results/num_option/num_option.ipynb
@@ -116,117 +116,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead tr th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead tr:last-of-type th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr>\n",
-       "      <th></th>\n",
-       "      <th colspan=\"6\" halign=\"left\">accuracy</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>method</th>\n",
-       "      <th>language_modeling</th>\n",
-       "      <th>average_language_modeling</th>\n",
-       "      <th>multiple_choice_prompt</th>\n",
-       "      <th>process_of_elimination</th>\n",
-       "      <th>calibration</th>\n",
-       "      <th>channel</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>dataset</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>logical_deduction_three_objects</th>\n",
-       "      <td>0.570</td>\n",
-       "      <td>0.558</td>\n",
-       "      <td>0.534</td>\n",
-       "      <td>0.702</td>\n",
-       "      <td>0.450</td>\n",
-       "      <td>0.400</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>logical_deduction_five_objects</th>\n",
-       "      <td>0.488</td>\n",
-       "      <td>0.458</td>\n",
-       "      <td>0.398</td>\n",
-       "      <td>0.560</td>\n",
-       "      <td>0.392</td>\n",
-       "      <td>0.208</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>logical_deduction_seven_objects</th>\n",
-       "      <td>0.472</td>\n",
-       "      <td>0.476</td>\n",
-       "      <td>0.452</td>\n",
-       "      <td>0.530</td>\n",
-       "      <td>0.388</td>\n",
-       "      <td>0.182</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                         accuracy                            \\\n",
-       "method                          language_modeling average_language_modeling   \n",
-       "dataset                                                                       \n",
-       "logical_deduction_three_objects             0.570                     0.558   \n",
-       "logical_deduction_five_objects              0.488                     0.458   \n",
-       "logical_deduction_seven_objects             0.472                     0.476   \n",
-       "\n",
-       "                                                                               \\\n",
-       "method                          multiple_choice_prompt process_of_elimination   \n",
-       "dataset                                                                         \n",
-       "logical_deduction_three_objects                  0.534                  0.702   \n",
-       "logical_deduction_five_objects                   0.398                  0.560   \n",
-       "logical_deduction_seven_objects                  0.452                  0.530   \n",
-       "\n",
-       "                                                     \n",
-       "method                          calibration channel  \n",
-       "dataset                                              \n",
-       "logical_deduction_three_objects       0.450   0.400  \n",
-       "logical_deduction_five_objects        0.392   0.208  \n",
-       "logical_deduction_seven_objects       0.388   0.182  "
+       "dataset\n",
+       "logical_deduction_three_objects    57.0\n",
+       "logical_deduction_five_objects     48.8\n",
+       "logical_deduction_seven_objects    47.6\n",
+       "dtype: float64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sing_means"
+    "# sing_means.droplevel(0, axis=1).max(axis=1)*100\n",
+    "sing_means.droplevel(0, axis=1).apply(lambda row: row.nlargest(2).iloc[-1], axis=1) * 100"
    ]
   },
   {
