--- a/results/main_exp/main_exp.ipynb
+++ b/results/main_exp/main_exp.ipynb
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
     "                ('accuracy',    'multiple_choice_prompt'), \n",
     "                ('accuracy',    'process_of_elimination'),]\n",
     "sing_all = sing_all.reindex(method_index, axis=\"columns\")\n",
-    "sing_all = sing_all.rename_axis(\"Dataset\")\n",
+    "sing_all = sing_all.rename_axis(\"Task\")\n",
     "sing_all.columns = sing_all.columns.set_names([None, \"Method\"])\n",
     "\n",
     "latex_means = sing_all.rename(columns={\"language_modeling\": \"LM\",\n",
@@ -275,7 +275,7 @@
     "    position=\"h\",\n",
     "    position_float=\"centering\",\n",
     "    label=\"tab:main_exp\",\n",
-    "    caption=r\"Accuracy scores (with standard deviation) on 8 benchmarks. Best scores are \\textbf{bold}, and second-best scores are \\underline{underlined}.LM refers to language modeling, AVG refers to average language modeling, MCP refers multiple choice prompting. Our method (PoE) achieves the best or comparable performance on all benchmarks.\",\n",
+    "    caption=r\"Accuracy scores (with standard deviation) on 8 tasks. Best scores are \\textbf{bold}, and second-best scores are \\underline{underlined}. LM refers to language modeling, AVG refers to average language modeling, MCP refers to multiple choice prompting. Our method (PoE) achieves the best or comparable performance on all tasks.\",\n",
     "    multicol_align=\"c\",\n",
     "    multirow_align=\"c\",\n",
     ")"
