--- a/results/num_option/num_option.ipynb
+++ b/results/num_option/num_option.ipynb
@@ -160,7 +160,7 @@
     "                ('accuracy',    'multiple_choice_prompt'), \n",
     "                ('accuracy',    'process_of_elimination'),]\n",
     "sing_all = sing_all.reindex(method_index, axis=\"columns\")\n",
-    "sing_all = sing_all.rename_axis(\"Dataset\")\n",
+    "sing_all = sing_all.rename_axis(\"Task\")\n",
     "sing_all.columns = sing_all.columns.set_names([None, \"Method\"])\n",
     "\n",
     "latex_means = sing_all.rename(columns={\"language_modeling\": \"LM\",\n",
