--- a/results/num_option/num_option.tex
+++ b/results/num_option/num_option.tex
@@ -1,9 +1,9 @@
 \begin{table}[h]
 \centering
-\caption{Accuracy on three subtasks of logical deduction, which have different numbers of options.}
+\caption{Accuracy scores on three subtasks of logical deduction, which have different numbers of options. PoE applies to tasks of varying difficulties.}
 \label{tab:num_option}
-\begin{tabular}{lcccccc}
-Dataset & LD (3) & LD (5) & LD (7) \\
+\begin{tabular}{l|c|c|c}
+Task & LD (3) & LD (5) & LD (7) \\
 Method &  &  &  \\
 LM & 57.0\textsubscript{3.9} & 48.8\textsubscript{2.7} & 47.2\textsubscript{2.7} \\
 AVG & 55.8\textsubscript{2.6} & 45.8\textsubscript{4.5} & 47.6\textsubscript{4.6} \\
