--- a/results/iter_poe/iter_poe.ipynb
+++ b/results/iter_poe/iter_poe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,8 +12,8 @@
     "import matplotlib.lines as mlines\n",
     "\n",
     "\n",
-    "poe_path = f\"../process_of_elimination.csv\"\n",
-    "iter_poe_path = f\"../iterative_process_of_elimination.csv\"\n",
+    "poe_path = f\"./process_of_elimination.csv\"\n",
+    "iter_poe_path = f\"./iterative_process_of_elimination.csv\"\n",
     "\n",
     "poe_raw_df = pd.read_csv(poe_path)\n",
     "iter_poe_raw_df = pd.read_csv(iter_poe_path)\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,11 +43,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "poe_df = process(poe_raw_df, drop_columns=[\"n_shot\", \"prompting_method\", \"scoring_method\", \"mask_accuracy\", \"mask_strategy\"])\n",
+    "poe_df = process(poe_raw_df, drop_columns=[\"n_shot\", \"prompting_method\", \"scoring_method\", \"mask_accuracy\", \"mask_strategy\", \"mask_token\"])\n",
     "iter_poe_df = process(iter_poe_raw_df, drop_columns=[\"n_shot\"])\n",
     "\n",
     "datasets=\"anli cqa siqa logical_deduction_five_objects disambiguation_qa conceptual_combinations strange_stories symbol_interpretation\".split()\n",
@@ -78,123 +78,41 @@
     "df[\"diff\"] = df[\"poe_accuracy\"] - df[\"iter_poe_accuracy\"]\n",
     "df[\"diff\"] = df[\"diff\"].apply(lambda x: round(x, 3))\n",
     "\n",
+    "# convert to percentage\n",
+    "df[\"poe_accuracy\"] = df[\"poe_accuracy\"].apply(lambda x: round(x*100, 1))\n",
+    "df[\"iter_poe_accuracy\"] = df[\"iter_poe_accuracy\"].apply(lambda x: round(x*100, 1))\n",
+    "df[\"diff\"] = df[\"diff\"].apply(lambda x: round(x*100, 1))\n",
+    "\n",
+    "# rename to conform to other tables.\n",
+    "temp_df = df.set_index(\"dataset\")\n",
+    "temp_df = temp_df.rename(columns={\"poe_accuracy\": \"PoE\", \n",
+    "                                  \"iter_poe_accuracy\": \"Iter PoE\", \n",
+    "                                  \"diff\": \"POE - Iter PoE\"},\n",
+    "                          index={\"anli\":\"ANLI\",\n",
+    "                                \"cqa\": \"CQA\",\n",
+    "                                \"siqa\": \"SIQA\",\n",
+    "                                \"logical_deduction_five_objects\": \"LD\",\n",
+    "                                \"disambiguation_qa\": \"DQA\",\n",
+    "                                \"conceptual_combinations\": \"CC\",\n",
+    "                                \"strange_stories\": \"SS\",\n",
+    "                                \"symbol_interpretation\": \"SIT\",\n",
+    "                                })\n",
+    "df = temp_df.reset_index()\n",
+    "df = df.rename(columns={\"dataset\": \"Task\"})\n",
+    "\n",
     "# save to csv\n",
-    "df.to_csv(\"poe_iter_poe.csv\", index=False)"
+    "df.to_csv(\"poe_iter_poe.csv\", index=False)\n",
+    "\n",
+    "# convert to markdown and save\n",
+    "df.to_markdown(\"poe_iter_poe.md\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>dataset</th>\n",
-       "      <th>poe_accuracy</th>\n",
-       "      <th>iter_poe_accuracy</th>\n",
-       "      <th>diff</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>anli</td>\n",
-       "      <td>0.556</td>\n",
-       "      <td>0.556</td>\n",
-       "      <td>0.000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>conceptual_combinations</td>\n",
-       "      <td>0.760</td>\n",
-       "      <td>0.742</td>\n",
-       "      <td>0.018</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>cqa</td>\n",
-       "      <td>0.895</td>\n",
-       "      <td>0.884</td>\n",
-       "      <td>0.011</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>disambiguation_qa</td>\n",
-       "      <td>0.678</td>\n",
-       "      <td>0.678</td>\n",
-       "      <td>0.000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>logical_deduction_five_objects</td>\n",
-       "      <td>0.560</td>\n",
-       "      <td>0.572</td>\n",
-       "      <td>-0.012</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>siqa</td>\n",
-       "      <td>0.817</td>\n",
-       "      <td>0.820</td>\n",
-       "      <td>-0.003</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>strange_stories</td>\n",
-       "      <td>0.756</td>\n",
-       "      <td>0.766</td>\n",
-       "      <td>-0.010</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>symbol_interpretation</td>\n",
-       "      <td>0.236</td>\n",
-       "      <td>0.238</td>\n",
-       "      <td>-0.002</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                          dataset  poe_accuracy  iter_poe_accuracy   diff\n",
-       "0                            anli         0.556              0.556  0.000\n",
-       "1         conceptual_combinations         0.760              0.742  0.018\n",
-       "2                             cqa         0.895              0.884  0.011\n",
-       "3               disambiguation_qa         0.678              0.678  0.000\n",
-       "4  logical_deduction_five_objects         0.560              0.572 -0.012\n",
-       "5                            siqa         0.817              0.820 -0.003\n",
-       "6                 strange_stories         0.756              0.766 -0.010\n",
-       "7           symbol_interpretation         0.236              0.238 -0.002"
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
