--- a/results/min_k_mask/min_k_mask.ipynb
+++ b/results/min_k_mask/min_k_mask.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
     "import matplotlib.lines as mlines\n",
     "\n",
     "\n",
-    "poe_path = f\"../process_of_elimination.csv\"\n",
+    "poe_path = f\"./process_of_elimination_0825.csv\"\n",
     "\n",
     "poe_raw_df = pd.read_csv(poe_path)\n",
     "\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
        "31           symbol_interpretation        min_k_4     0.254"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
        "30           symbol_interpretation        min_k_3     0.274"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +554,7 @@
        "22           symbol_interpretation       min_k_3     0.274"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,6 +570,157 @@
     "# Get the rows with the highest accuracy for each dataset\n",
     "rows_with_highest_accuracy = df.loc[max_accuracy_indices]\n",
     "rows_with_highest_accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp_df = rows_with_highest_accuracy.copy()\n",
+    "\n",
+    "# rename to conform to other tables.\n",
+    "\n",
+    "temp_df = temp_df.set_index(\"dataset\")\n",
+    "temp_df = temp_df.rename(columns={\"accuracy\": \"Accuracy\",\n",
+    "                                  \"mask_strategy\": \"Best Mask\",\n",
+    "                                  \"dataset\": \"Task\"},\n",
+    "                          index={\"anli\":\"ANLI\",\n",
+    "                                \"cqa\": \"CQA\",\n",
+    "                                \"siqa\": \"SIQA\",\n",
+    "                                \"logical_deduction_five_objects\": \"LD\",\n",
+    "                                \"disambiguation_qa\": \"DQA\",\n",
+    "                                \"conceptual_combinations\": \"CC\",\n",
+    "                                \"strange_stories\": \"SS\",\n",
+    "                                \"symbol_interpretation\": \"SIT\",\n",
+    "                                })\n",
+    "\n",
+    "\n",
+    "temp_df = temp_df.reset_index()\n",
+    "temp_df = temp_df.rename(columns={\"dataset\": \"Task\"})\n",
+    "\n",
+    "# convert accuracy to percentage\n",
+    "temp_df[\"Accuracy\"] = temp_df[\"Accuracy\"].apply(lambda x: f\"{x*100:.1f}\")\n",
+    "\n",
+    "# change some names\n",
+    "replacement_mapping = {\n",
+    "    \"lowest\": \"Lowest\",\n",
+    "    \"min_k_2\": \"Min K (2)\",\n",
+    "    \"min_k_3\": \"Min K (3)\",\n",
+    "    \"min_k_4\": \"Min K (4)\",\n",
+    "}\n",
+    "temp_df['Best Mask'] = temp_df['Best Mask'].replace(replacement_mapping)\n",
+    "\n",
+    "# save to csv\n",
+    "temp_df.to_csv(\"min_k_mask_max_accuracy.csv\", index=False)\n",
+    "# save to markdown\n",
+    "temp_df.to_markdown(\"min_k_mask_max_accuracy.md\", index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Task</th>\n",
+       "      <th>Best Mask</th>\n",
+       "      <th>Accuracy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ANLI</td>\n",
+       "      <td>Min K (2)</td>\n",
+       "      <td>57.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CC</td>\n",
+       "      <td>Lowest</td>\n",
+       "      <td>76.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>CQA</td>\n",
+       "      <td>Lowest</td>\n",
+       "      <td>89.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>DQA</td>\n",
+       "      <td>Lowest</td>\n",
+       "      <td>67.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>LD</td>\n",
+       "      <td>Lowest</td>\n",
+       "      <td>56.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>SIQA</td>\n",
+       "      <td>Lowest</td>\n",
+       "      <td>81.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>SS</td>\n",
+       "      <td>Min K (2)</td>\n",
+       "      <td>76.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>SIT</td>\n",
+       "      <td>Min K (3)</td>\n",
+       "      <td>27.4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Task  Best Mask Accuracy\n",
+       "0  ANLI  Min K (2)     57.8\n",
+       "1    CC     Lowest     76.0\n",
+       "2   CQA     Lowest     89.5\n",
+       "3   DQA     Lowest     67.8\n",
+       "4    LD     Lowest     56.0\n",
+       "5  SIQA     Lowest     81.7\n",
+       "6    SS  Min K (2)     76.6\n",
+       "7   SIT  Min K (3)     27.4"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp_df"
    ]
   }
  ],
