--- a/results/logical_reasoning/logical_reasoning.ipynb
+++ b/results/logical_reasoning/logical_reasoning.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,6 +81,9 @@
     "\n",
     "# rearrange columns: dataset, mcp_accuracy, poe_accuracy\n",
     "df = df[[\"dataset\", \"mcp_accuracy\", \"poe_accuracy\"]]\n",
+    "# mcp_accuracy, poe_accuracy: convert to percentage\n",
+    "df[\"mcp_accuracy\"] = df[\"mcp_accuracy\"] * 100\n",
+    "df[\"poe_accuracy\"] = df[\"poe_accuracy\"] * 100\n",
     "# compute the difference, 3 decimal places\n",
     "df[\"difference\"] = df[\"poe_accuracy\"] - df[\"mcp_accuracy\"]\n",
     "df[\"difference\"] = df[\"difference\"].apply(lambda x: round(x, 3))\n",
@@ -93,118 +96,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>dataset</th>\n",
-       "      <th>mcp_accuracy</th>\n",
-       "      <th>poe_accuracy</th>\n",
-       "      <th>difference</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>logical_args</td>\n",
-       "      <td>0.500</td>\n",
-       "      <td>0.688</td>\n",
-       "      <td>0.188</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>identify_math_theorems</td>\n",
-       "      <td>0.340</td>\n",
-       "      <td>0.472</td>\n",
-       "      <td>0.132</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>code_line_description</td>\n",
-       "      <td>0.672</td>\n",
-       "      <td>0.759</td>\n",
-       "      <td>0.087</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>reasoning_about_colored_objects</td>\n",
-       "      <td>0.538</td>\n",
-       "      <td>0.606</td>\n",
-       "      <td>0.068</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>crass_ai</td>\n",
-       "      <td>0.841</td>\n",
-       "      <td>0.818</td>\n",
-       "      <td>-0.023</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>evaluating_information_essentiality</td>\n",
-       "      <td>0.250</td>\n",
-       "      <td>0.191</td>\n",
-       "      <td>-0.059</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>riddle_sense</td>\n",
-       "      <td>0.551</td>\n",
-       "      <td>0.490</td>\n",
-       "      <td>-0.061</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>identify_odd_metaphor</td>\n",
-       "      <td>0.562</td>\n",
-       "      <td>0.500</td>\n",
-       "      <td>-0.062</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                               dataset  mcp_accuracy  poe_accuracy  difference\n",
-       "5                         logical_args         0.500         0.688       0.188\n",
-       "3               identify_math_theorems         0.340         0.472       0.132\n",
-       "0                code_line_description         0.672         0.759       0.087\n",
-       "6      reasoning_about_colored_objects         0.538         0.606       0.068\n",
-       "1                             crass_ai         0.841         0.818      -0.023\n",
-       "2  evaluating_information_essentiality         0.250         0.191      -0.059\n",
-       "7                         riddle_sense         0.551         0.490      -0.061\n",
-       "4                identify_odd_metaphor         0.562         0.500      -0.062"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "temp_df = df.copy()\n",
+    "temp_df = temp_df.set_index(\"dataset\")\n",
+    "temp_df = temp_df.rename(columns={\"mcp_accuracy\": \"MCP\",\n",
+    "                                    \"poe_accuracy\": \"PoE\",\n",
+    "                                    \"difference\": \"Improvmement\"\n",
+    "                                  },\n",
+    "                          index={\"logical_args\":\"LA\",\n",
+    "                                \"identify_math_theorems\": \"IMT\",\n",
+    "                                \"code_line_description\": \"CLD\",\n",
+    "                                \"reasoning_about_colored_objects\": \"RACO\",\n",
+    "                                \"crass_ai\": \"CAI\",\n",
+    "                                \"evaluating_information_essentiality\": \"EIE\",\n",
+    "                                \"identify_odd_metaphor\": \"IOM\",\n",
+    "                                \"riddle_sense\": \"RS\",\n",
+    "                                \"identify_odd_metaphor\": \"IOM\",\n",
+    "                                })\n",
     "\n",
     "\n",
-    "df"
+    "temp_df = temp_df.reset_index()\n",
+    "temp_df = temp_df.rename(columns={\"dataset\": \"Task\"})\n",
+    "# save to csv\n",
+    "temp_df.to_csv(\"logical_reasoning_v2.csv\", index=False)\n",
+    "# save to markdown\n",
+    "temp_df.to_markdown(\"logical_reasoning_v2.md\", index=False)"
    ]
   }
  ],
