--- a/results/logical_reasoning/logical_reasoning.ipynb
+++ b/results/logical_reasoning/logical_reasoning.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
     "temp_df = temp_df.set_index(\"dataset\")\n",
     "temp_df = temp_df.rename(columns={\"mcp_accuracy\": \"MCP\",\n",
     "                                    \"poe_accuracy\": \"PoE\",\n",
-    "                                    \"difference\": \"Improvmement\"\n",
+    "                                    \"difference\": \"PoE - MCP\"\n",
     "                                  },\n",
     "                          index={\"logical_args\":\"LA\",\n",
     "                                \"identify_math_theorems\": \"IMT\",\n",
