--- a/results/few_shot_v3/few_shot_v3.ipynb
+++ b/results/few_shot_v3/few_shot_v3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,6 +79,9 @@
     "# compute difference, 3 decimal places\n",
     "df[\"Improvement\"] = df[\"PoE\"] - df[\"MCP\"]\n",
     "df[\"Improvement\"] = df[\"Improvement\"].apply(lambda x: round(x, 3))\n",
+    "\n",
+    "# rename: Improvement -> PoE - MCP\n",
+    "df = df.rename(columns={\"Improvement\": \"PoE - MCP\"})\n",
     "\n",
     "# rename dataset -> Task\n",
     "df = df.rename(columns={\"dataset\": \"Task\",\n",
