--- a/results/iter_poe/iter_poe.ipynb
+++ b/results/iter_poe/iter_poe.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
     "temp_df = df.set_index(\"dataset\")\n",
     "temp_df = temp_df.rename(columns={\"poe_accuracy\": \"PoE\", \n",
     "                                  \"iter_poe_accuracy\": \"Iter PoE\", \n",
-    "                                  \"diff\": \"POE - Iter PoE\"},\n",
+    "                                  \"diff\": \"PoE - Iter PoE\"},\n",
     "                          index={\"anli\":\"ANLI\",\n",
     "                                \"cqa\": \"CQA\",\n",
     "                                \"siqa\": \"SIQA\",\n",
