--- a/results/llm/llm.ipynb
+++ b/results/llm/llm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# keep tasks: \"ANLI\", \"CQA\",\"SIQA\",\"LD\", \"DQA\",\"CC\", \"SS\",\"SIT\",\n",
+    "original_df = temp_df[temp_df[\"Task\"].isin([\"ANLI\", \"CQA\",\"SIQA\",\"LD\", \"DQA\",\"CC\", \"SS\",\"SIT\",])]\n",
+    "# rearrange rows according to task:\"ANLI\", \"CQA\",\"SIQA\",\"LD\", \"DQA\",\"CC\", \"SS\",\"SIT\",\n",
+    "\n",
+    "\n",
+    "\n",
+    "# to csv\n",
+    "original_df.to_csv(f\"{model}_{n_shot}_shot_original.csv\", index=False)\n",
+    "# to markdown\n",
+    "original_df.to_markdown(f\"{model}_{n_shot}_shot_original.md\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
